test/libsolidity/syntaxTests/natspec/docstring_empty_tag.sol
contract C {
    /// @param
    function vote(uint id) public;
}
// ----
// DocstringParsingError: End of tag @param not found
// TypeError: (0-64): Contract "C" should be marked as abstract.
